# gif-editor

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  biome.json  index.html  lefthook.yml  package.json  plan.md  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
pkg/: README.md  gif_editor.d.ts  gif_editor.js  gif_editor_bg.js  gif_editor_bg.wasm  gif_editor_bg.wasm.d.ts  package.json
src/: App.tsx  lib.rs  main.tsx
src/components/: VideoToGif.tsx  video-to-gif.tsx
src/components/features/: gif-crop.tsx  gif-resize.tsx  video-to-gif.tsx
src/components/forms/: video-to-gif-form.tsx
src/components/ui/: conversion-progress.tsx  error-message.tsx  file-upload-zone.tsx
src/config/: tools.tsx
src/hooks/: use-gif-converter.ts  use-video-preview.ts  use-wasm.ts
src/lib/: ffmpeg.ts
src/pages/: About.tsx  about.tsx  app.tsx
src/routes/: root.tsx
src/stores/: gif-converter-store.ts
src/types/: conversion.ts  tools.ts
src/utils/: wasm.ts
